--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,36 @@
 <resources>
-    <string name="app_name">Affirmations</string>
-    <string name="affirmation1">I am strong.</string>
-    <string name="affirmation2">I believe in myself.</string>
-    <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
-    <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
-    <string name="affirmation5">I have so much to be grateful for.</string>
-    <string name="affirmation6">Good things are always coming into my life.</string>
-    <string name="affirmation7">New opportunities await me at every turn.</string>
-    <string name="affirmation8">I have the courage to follow my heart.</string>
-    <string name="affirmation9">Things will unfold at precisely the right time.</string>
-    <string name="affirmation10">I will be present in all the moments that this day brings.</string>
+    <string name="app_name">BJIT ACADEMY</string>
+    <string name="person1">Person 1</string>
+    <string name="person2">Person 2</string>
+    <string name="person3">Person 3</string>
+    <string name="person4">Person 4</string>
+    <string name="person5">Person 5</string>
+    <string name="person6">Person 6</string>
+    <string name="person7">Person 7</string>
+    <string name="person8">Person 8</string>
+    <string name="person9">Person 9</string>
+    <string name="person10">Person 10</string>
+    <string name="id1">T-30001</string>
+    <string name="id2">T-30002</string>
+    <string name="id3">T-30003</string>
+    <string name="id4">T-30004</string>
+    <string name="id5">T-30005</string>
+    <string name="id6">T-30006</string>
+    <string name="id7">T-30007</string>
+    <string name="id8">T-30008</string>
+    <string name="id9">T-30009</string>
+    <string name="id10">T-300010</string>
+    <string name="A_positive"><b>A+</b></string>
+    <string name="A_negative"><b>A-</b></string>
+    <string name="B_positive"><b>B+</b></string>
+    <string name="B_negative"><b>B-</b></string>
+    <string name="AB_positive"><b>AB+</b></string>
+    <string name="AB_negative"><b>AB-</b></string>
+    <string name="O_positive"><b>O+</b></string>
+    <string name="O_negative"><b>O-</b></string>
+    <string name="bjit_title"><b>BJIT Academy\'s \nStudents Info</b></string>
+    <string name="logo_image">BJIT academy logo</string>
+    <string name="sampleName">Sample Name</string>
+    <string name="sampleId">T-30000</string>
+    <string name="sampleBloodGroup"><b>O-</b></string>
 </resources>
